--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+word2vec.weights.*
+checkpoint
+model.py
+model_skipgram.py
+word2vec_basic.py
+word_meta.json
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
